add-opens for DebugAttachDetector
GitOrigin-RevId: 344c17d0bbe895282392ef6e068ecfd228decb10