@@ -21,6 +21,7 @@ final class VmOptionsGenerator {
     '-Dkotlinx.coroutines.debug=off',
     '--add-opens=java.base/java.lang=ALL-UNNAMED',
     '--add-opens=java.base/java.util=ALL-UNNAMED',
+    '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
     '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
     '--add-opens=java.desktop/java.awt=ALL-UNNAMED',
     '--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
